--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,10 @@
         "yiisoft/yii2-symfonymailer": "~2.0.3",
         "yiisoft/yii2-debug": "~2.1.0",
         "yiisoft/yii2-gii": "~2.2.0",
-        "vlucas/phpdotenv": "^5.4"
+        "vlucas/phpdotenv": "^5.4",
+        "hail812/yii2-adminlte3": "~1.1",
+        "kartik-v/yii2-widget-timepicker": "dev-master",
+        "kartik-v/yii2-widget-datepicker": "dev-master"
     },
     "require-dev": {
         "yiisoft/yii2-faker": "~2.0.0",
